@@ -6,6 +6,8 @@ Knotter 0.6.0  - Ongoing development
 * Insert polygons
 * Break edges
 * Customizable Toolbars
+* Czech translation
+* Italian translation
 
 Knotter 0.5.0
 --------------------
